KiLCA/math/zersol-0.0.0/src/zersolc.h

/*!
*  \brief \_Real is a convenient alias for the real number type. Possible values: float, double (recommended).
*/
#define _Real double
/*!
*  \brief \_real\_ is typedef for real numbers for the ZerSol C interface.
*/
typedef _Real _real_;                 /* _real_: ZerSol type for real numbers */
/*!
*  \brief \_complex\_ is typedef for complex numbers for the ZerSol C interface.
*/
typedef _Real _Complex _complex_;     /* _complex_: ZerSol type for complex numbers */
/*!
*  \brief complex_function is typedef for complex functions for the ZerSol C interface.
*/
typedef _complex_ (*complex_function) (_complex_, void *);
/*!
*  \brief Create a data structure needed for the subsequent calls of the solver functions.
*  \param f           name of a C function that evaluates the complex function value
*  \param df          name of a C function that evaluates the complex function derivative
*  \param data        pointer to a structure that can be used to pass any data into the function and its derivative
*  \param description string that indicates the function purpose
*  \param xmin        minimum x-coordinate of the rectangular region
*  \param xmax        maximum x-coordinate of the rectangular region
*  \param ymin        minimum y-coordinate of the rectangular region
*  \param ymax        maximum y-coordinate of the rectangular region
*  \return            pointer to the solver structure
*/
void * create_solver(complex_function f,
                     complex_function df,
                     void * data,
                     char const * description,
                     _real_ xmin,
                     _real_ xmax,
                     _real_ ymin,
                     _real_ ymax
                    );
/*!
*  \brief Run the zeros search procedure.
*  \param solver  pointer to the solver structure
*  \param N       length of the passed Z and V arrays
*  \param Z       array for the function zeros
*  \param V       array for the function values V = F(Z)
*  \param n_zeros number of the zeros found
*  \return        search status
*/
int find_zeros(void * solver, int N, _complex_ * Z, _complex_ * V, int * n_zeros);
/*!
*  \brief Print the status of the zeros search.
*  \param solver    pointer to the solver structure
*  \param file_name name of a file to print in. The status is printed to stdout if file_name is empty string.
*/
void print_status(void * solver, const char * file_name);
/*!
*  \brief Print the dump of the solver data.
*  \param solver    pointer to the solver structure
*  \param file_name name of a file to print in. The dump is printed to stdout if file_name is empty string.
*/
void print_dump(void * solver, const char * file_name);
/*!
*  \brief Free the memory allocated by the solver.
*  \param solver pointer to the solver structure
*/
void free_solver(void * solver);
/* additional SET functions: */
/*!
*  \brief Set a finite difference method for numerical evaluation of the function derivative.
*  \param solver pointer to the solver structure
*  \param method finite difference method: pass method = 0 for 3-point stencil approximation (second order) and method = 1 for 5-point stencil approximation (fourth order)
*/
void set_nd_method(void * solver, int method);
/*!
*  \brief Set a step size (dz) for numerical evaluation of the function derivative.
*  \param solver pointer to the solver structure
*  \param h step size
*/
void set_nd_step(void * solver, _real_ h);
/*!
*  \brief Set the minimum recursion level for the winding number evaluation procedure.
*  \param solver pointer to the solver structure
*  \param min_rec_lev minimum recursion level
*/
void set_min_rec_lev(void * solver, int min_rec_lev);
/*!
*  \brief Set a desired number of the function zeros.
*  \param solver pointer to the solver structure
*  \param n_target target number of zeros
*/
void set_n_target(void * solver, int n_target);
/*!
*  \brief Set the array of a user supplied starting values for the Newton's iterations.
*  \param solver pointer to the solver structure
*  \param n_start number of starting values
*  \param start   array of starting values
*/
void set_start_array(void * solver, int n_start, _complex_ * start);
/*!
*  \brief Set the number of automatic starting points along Re{z}.
*  \param solver pointer to the solver structure
*  \param n_split_x number of starting points
*/
void set_n_split_x(void * solver, int n_split_x);
/*!
*  \brief Set the number of automatic starting points along Im{z}.
*  \param solver pointer to the solver structure
*  \param n_split_y number of starting points
*/
void set_n_split_y(void * solver, int n_split_y);
/*!
*  \brief Set the maximum number of the Newton's iterations for each starting point.
*  \param solver pointer to the solver structure
*  \param max_iter_num maximum number of iterations
*/
void set_max_iter_num(void * solver, int max_iter_num);
/*!
*  \brief Set the absolute and relative tolerances for the convergence condition on z.
*  \param solver pointer to the solver structure
*  \param abs_eps_z absolute tolerance
*  \param rel_eps_z relative tolerance
*/
void set_eps_for_arg(void * solver, _real_ abs_eps_z, _real_ rel_eps_z);
/*!
*  \brief Set the absolute and relative tolerances for the convergence condition on f(z).
*  \param solver pointer to the solver structure
*  \param abs_eps_f absolute tolerance
*  \param rel_eps_f relative tolerance
*/
void set_eps_for_func(void * solver, _real_ abs_eps_f, _real_ rel_eps_f);
/*!
*  \brief Set a flag that defines whether the solver will use the winding number evaluation or just Newton iterations.
*  \param solver pointer to the solver structure
*  \param use_winding flag: true - use the winding number evaluation, false - use the Newton's iterations only
*/
void set_use_winding(void * solver, int use_winding);
/*!
*  \brief Set the debug level (determines the amount of internal checks).
*  \param solver pointer to the solver structure
*  \param debug_level debug level
*/
void set_debug_level(void * solver, int debug_level);
/*!
*  \brief Set the print level (determines the amount of details printed).
*  \param solver pointer to the solver structure
*  \param print_level print level
*/
void set_print_level(void * solver, int print_level);