KiLCA/eigmode/calc_eigmode.h

/**********************************************************************************/

typedef complex<double> (*cmplx_func)(complex<double>, void *params);
/**********************************************************************************/

struct det_params
{
    int ind;
    int m;
    int n;
    double delta;
    core_data *cd;
};
/**********************************************************************************/

int eval_det (const double x[2], void *params, double f[2]);
int find_det_zeros (int ind, int m, int n, core_data *cd);
complex<double> calc_circle_integral(complex<double> center, double radius, cmplx_func inv_det, void *params);
complex<double> inv_det(complex<double> z, void *params);
int loop_over_frequences (int ind, int m, int n, core_data *cd);
void calc_det (double *freq, double *absdet, void *params);
int find_eigmodes (int ind, int m, int n, core_data *cd);